overflow-x fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    overflow-x: hidden;
 }
 
 #logonotmobile{
